--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - Le délice des sens</title>
+    <title>Menu - La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
@@ -15,27 +15,27 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <a href="../index.html"><i class="fa-solid fa-left-long"></i>
+            <a href="../index.html"><i class="fa-solid fa-left-long"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img class="img-restaurant" src="../Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-enchantee" src="../Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="enchantee">
         </header> 
         <main>
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
-                    <h1 class="titre_lacarte">Le délice des sens</h1>
+                    <h1 class="titre_lacarte">La note enchantée</h1>
                     <div class="coeur1">
-                        <i class="fa-solid fa-heart " aria-hidden="true"></i>
+                       <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
-                </div>                                       
-                <ul class="entrees">                   
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2>
-                    <a href="#">
+                </div>                                        
+                <ul class="entrees">                    
+                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
+                    <a href="#">             
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Tartare de thon</h3>
-                                <span class="accompagnement">Assaisonné au yuzu</span>
+                                <h3 class="titre_menus">Ravioles de foie gras</h3>
+                                <span class="accompagnement">Accompagnées de leur crème à la truffe</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">25€</p>                                
@@ -48,8 +48,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Bouchée de homard croustillant</h3>
-                                <span class="accompagnement">Et sa farandole de petits légumes</span>
+                                <h3 class="titre_menus">Caviar osciètre</h3>
+                                <span class="accompagnement">Sur blini à la farine de blé noir</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">35€</p>                                
@@ -62,25 +62,39 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
-                                <span class="accompagnement">Et sa crème de truffe</span>
+                                <h3 class="titre_menus">Homard et espuma de potiron</h3>
+                                <span class="accompagnement">Marinés aux zestes d'orange</span>
                             </div>
                             <div class="validation"> 
-                                <p class="prix-txt">40€</p>                                
+                                <p class="prix-txt">20€</p>                                
                                 <div class="check">
                                     <i class="fa-solid fa-check-circle"></i>                               
                                 </div>
                             </div>
                         </article>
-                    </li>             
+                    </li>
+                    <li class="menu">
+                        <article class="plats">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
+                                <span class="accompagnement">Confiture de figue et pain toasté</span>
+                            </div>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
+                            </div>
+                        </article>
+                    </li>                         
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
-                                <span class="accompagnement">Et sa crème de truffe</span>
+                                <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
+                                <span class="accompagnement">Sur lit de purée de céleri-rave</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">40€</p>                                
@@ -93,8 +107,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Langouste rôtie</h3>
-                                <span class="accompagnement">Et ses légumes de saison</span>
+                                <h3 class="titre_menus">Langoustine poêlée</h3>
+                                <span class="accompagnement">Purée de patate douce</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">35€</p>                               
@@ -107,11 +121,11 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Côte de bœuf Angus</h3>
-                                <span class="accompagnement">Et sa purée de panais</span>
+                                <h3 class="titre_menus">Mijoté de queue de bœuf</h3>
+                                <span class="accompagnement">Et riz sauvage aux zestes de citron</span>
                             </div>
                             <div class="validation"> 
-                                <p class="prix-txt">44€</p>                                
+                                <p class="prix-txt">45€</p>                                
                                 <div class="check">
                                     <i class="fa-solid fa-check-circle"></i>                               
                                 </div>
@@ -124,8 +138,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Farandole de desserts</h3>
-                                <span class="accompagnement">Du chef</span>
+                                <h3 class="titre_menus">Macaron noisette et chocolat</h3>
+                                <span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">18€</p>                                
@@ -138,8 +152,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Crème brulée</h3>
-                                <span class="accompagnement">Revisitée</span>
+                                <h3 class="titre_menus">Baba au rhum revisité</h3>
+                                <span class="accompagnement">Avec son coulis de citron</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">22€</p>                                
@@ -152,8 +166,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Tiramisu</h3>
-                                <span class="accompagnement">À la noisette</span>
+                                <h3 class="titre_menus">Tarte au citron meringuée</h3>
+                                <span class="accompagnement">Déstructurée</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">23€</p>                                
@@ -165,6 +179,7 @@
                     </li>             
                     </a>
                 </ul>
+
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
