--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - À la française</title>
+    <title>Menu - Le délice des sens</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
@@ -15,30 +15,27 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <a href="../index.html"><i class="fa-solid fa-left-long"></i></a>
+            <a href="../index.html"><i class="fa-solid fa-left-long"></i>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img class="img-restaurant" src="../Assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-restaurant" src="../Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
         <main>
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
-                    <h1 class="titre_lacarte">À la française</h1>
-
-
-                    </h1>
+                    <h1 class="titre_lacarte">Le délice des sens</h1>
                     <div class="coeur1">
-                       <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart " aria-hidden="true"></i>
                     </div>
-                </div>                                        
-                <ul class="entrees">                    
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
-                    <a href="#">             
+                </div>                                       
+                <ul class="entrees">                   
+                    <h2 class="subtitle_lacarte">ENTRÉES</h2>
+                    <a href="#">
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
-                                <span class="accompagnement">Aux zestes d'orange</span>
+                                <h3 class="titre_menus">Tartare de thon</h3>
+                                <span class="accompagnement">Assaisonné au yuzu</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">25€</p>                                
@@ -51,8 +48,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Velouté de légumes d'antan</h3>
-                                <span class="accompagnement">Carotte, panais, topinambour</span>
+                                <h3 class="titre_menus">Bouchée de homard croustillant</h3>
+                                <span class="accompagnement">Et sa farandole de petits légumes</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">35€</p>                                
@@ -65,11 +62,11 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Soupe à l'oignon</h3>
-                                <span class="accompagnement">Revisitée</span>
+                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
+                                <span class="accompagnement">Et sa crème de truffe</span>
                             </div>
                             <div class="validation"> 
-                                <p class="prix-txt">20€</p>                                
+                                <p class="prix-txt">40€</p>                                
                                 <div class="check">
                                     <i class="fa-solid fa-check-circle"></i>                               
                                 </div>
@@ -82,8 +79,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
-                                <span class="accompagnement">Accompagnées d'une purée de panais</span>
+                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
+                                <span class="accompagnement">Et sa crème de truffe</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">40€</p>                                
@@ -96,8 +93,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Magret de canard</h3>
-                                <span class="accompagnement">Et parmentier de pommes de terre</span>
+                                <h3 class="titre_menus">Langouste rôtie</h3>
+                                <span class="accompagnement">Et ses légumes de saison</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">35€</p>                               
@@ -110,8 +107,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
+                                <h3 class="titre_menus">Côte de bœuf Angus</h3>
+                                <span class="accompagnement">Et sa purée de panais</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">44€</p>                                
@@ -127,8 +124,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Pétales de violettes glacés</h3>
-                                <span class="accompagnement">Et purée de noisettes</span>
+                                <h3 class="titre_menus">Farandole de desserts</h3>
+                                <span class="accompagnement">Du chef</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">18€</p>                                
@@ -141,8 +138,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Fondant au chocolat</h3>
-                                <span class="accompagnement">Revisité</span>
+                                <h3 class="titre_menus">Crème brulée</h3>
+                                <span class="accompagnement">Revisitée</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">22€</p>                                
@@ -155,8 +152,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Millefeuille croustillant</h3>
-                                <span class="accompagnement">Myrtilles et pâte d’amande</span>
+                                <h3 class="titre_menus">Tiramisu</h3>
+                                <span class="accompagnement">À la noisette</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">23€</p>                                
