--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="Sass/main.css">
 </head>
 <body>
+    <div class="loader-container" id="loader">
+        <div class="loader"></div>
+    </div>   
     <div class="main-container">
         <header>
             <img src="Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
