--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - La note enchantée</title>
+    <title>Menu - À la française</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
@@ -18,12 +18,15 @@
             <a href="../index.html"><i class="fa-solid fa-left-long"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img class="img-enchantee" src="../Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="enchantee">
+            <img class="img-restaurant" src="../Assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
         <main>
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
-                    <h1 class="titre_lacarte">La note enchantée</h1>
+                    <h1 class="titre_lacarte">À la française</h1>
+
+
+                    </h1>
                     <div class="coeur1">
                        <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
@@ -34,8 +37,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Ravioles de foie gras</h3>
-                                <span class="accompagnement">Accompagnées de leur crème à la truffe</span>
+                                <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
+                                <span class="accompagnement">Aux zestes d'orange</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">25€</p>                                
@@ -48,8 +51,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Caviar osciètre</h3>
-                                <span class="accompagnement">Sur blini à la farine de blé noir</span>
+                                <h3 class="titre_menus">Velouté de légumes d'antan</h3>
+                                <span class="accompagnement">Carotte, panais, topinambour</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">35€</p>                                
@@ -62,8 +65,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Homard et espuma de potiron</h3>
-                                <span class="accompagnement">Marinés aux zestes d'orange</span>
+                                <h3 class="titre_menus">Soupe à l'oignon</h3>
+                                <span class="accompagnement">Revisitée</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">20€</p>                                
@@ -72,29 +75,15 @@
                                 </div>
                             </div>
                         </article>
-                    </li>
-                    <li class="menu">
-                        <article class="plats">
-                            <div class="menu-txt">
-                                <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
-                                <span class="accompagnement">Confiture de figue et pain toasté</span>
-                            </div>
-                            <div class="validation"> 
-                                <p class="prix-txt">35€</p>                                
-                                <div class="check">
-                                    <i class="fa-solid fa-check-circle"></i>                               
-                                </div>
-                            </div>
-                        </article>
-                    </li>                         
+                    </li>             
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
-                                <span class="accompagnement">Sur lit de purée de céleri-rave</span>
+                                <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
+                                <span class="accompagnement">Accompagnées d'une purée de panais</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">40€</p>                                
@@ -107,8 +96,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Langoustine poêlée</h3>
-                                <span class="accompagnement">Purée de patate douce</span>
+                                <h3 class="titre_menus">Magret de canard</h3>
+                                <span class="accompagnement">Et parmentier de pommes de terre</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">35€</p>                               
@@ -121,11 +110,11 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Mijoté de queue de bœuf</h3>
-                                <span class="accompagnement">Et riz sauvage aux zestes de citron</span>
+                                <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
                             </div>
                             <div class="validation"> 
-                                <p class="prix-txt">45€</p>                                
+                                <p class="prix-txt">44€</p>                                
                                 <div class="check">
                                     <i class="fa-solid fa-check-circle"></i>                               
                                 </div>
@@ -138,8 +127,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Macaron noisette et chocolat</h3>
-                                <span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
+                                <h3 class="titre_menus">Pétales de violettes glacés</h3>
+                                <span class="accompagnement">Et purée de noisettes</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">18€</p>                                
@@ -152,8 +141,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Baba au rhum revisité</h3>
-                                <span class="accompagnement">Avec son coulis de citron</span>
+                                <h3 class="titre_menus">Fondant au chocolat</h3>
+                                <span class="accompagnement">Revisité</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">22€</p>                                
@@ -166,8 +155,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Tarte au citron meringuée</h3>
-                                <span class="accompagnement">Déstructurée</span>
+                                <h3 class="titre_menus">Millefeuille croustillant</h3>
+                                <span class="accompagnement">Myrtilles et pâte d’amande</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">23€</p>                                
@@ -179,7 +168,6 @@
                     </li>             
                     </a>
                 </ul>
-
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
