--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>   
     <div class="main-container">
         <header>
-            <img src="Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
+            <img src="Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo">
         <nav>
             <form class="search-bar">
                 <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
@@ -28,9 +28,9 @@
             <div class="explorer">
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-                <a href="#restaurants">
+                <a href="#restaurants"></a>
                 <button  disabled="" class="searchbutton" value="rechercher">
-                    <abbr class="glass">Explorer nos restaurants</abbr></a>
+                    <abbr title="glass">Explorer nos restaurants</abbr>
                 </button>
             </div>
         <main>
@@ -83,7 +83,7 @@
                             <h3 class="carte-title">La note enchantée</h3>
                             <p class="carte-subtitle">Charonne</p>
                             <div class="coeur1">                                                                                                             
-                              <i class="fa-solid fa-heart "aria-hidden="true"></i>                              
+                              <i class="fa-solid fa-heart" aria-hidden ="true"></i>                              
                             </div>                          
                         </div>
                     </article>
@@ -116,15 +116,15 @@
         </section>
         </main>
         <footer>
-            <img src="Assets/Images/logo/ohmyfood.png" class="logo_footer" alt="logo.png"></img>
+            <img src="Assets/Images/logo/ohmyfood.png" class="logo_footer" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
-                    <i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></li>
                     <li class="rotate">
                         <i class="fa-solid fa-handshake-simple" aria-hidden="true"></i>
                         <b class="logofooter-txt2"> Devenir partenaire</b>
                     </li>
-                    <li><b>Mentions légales</b></a></li>
+                    <li><b>Mentions légales</b></li>
                     <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
             </div>
