Rangement Sass + Validation CSS au W3C

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
             <div class="explorer">
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-                <a href="#restaurants"></a>
-                <button  disabled="" class="searchbutton" value="rechercher">
-                    <abbr title="glass">Explorer nos restaurants</abbr>
-                </button>
+                <a href="#restaurants" class="searchbutton">Explorer nos restaurants</a>
             </div>
         <main>
         <section class="fonctionnement">
