--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -15,10 +15,10 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <a href="../index.html"><i class="fa-solid fa-left-long"></i>
+            <a href="../index.html"><i class="fa-solid fa-left-long"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img class="img-restaurant" src="../Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-restaurant"  src="../Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
         <main>
             <section class="lacarte">
