--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 <a href="Restaurants/restaurant1.html">
                     <article class="carte">
                         <div class="image-container">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">                          
+                            <img class="img-lapalette-accueil" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">                          
                             <span class="image-txt">Nouveau</span>
                         </div>
-                        <div class="carte-txt">    
+                        <div class="carte-txt2">    
                             <h3 class="carte-title">La palette du goût</h3>
                             <p class="carte-subtitle">Ménilmontant</p>                            
                             <div class="coeur1">
@@ -76,7 +76,7 @@
                             <img class="img-enchantee-accueil"  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
                             <span class="image-txt">Nouveau</span>
                         </div>                     
-                        <div class="carte-txt">    
+                        <div class="carte-txt2">    
                             <h3 class="carte-title">La note enchantée</h3>
                             <p class="carte-subtitle">Charonne</p>
                             <div class="coeur1">                                                                                                             
