--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -178,7 +178,7 @@
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
-            <p class="logo_footer">ohmyfood</p>
+            <img src="/Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
                     <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
