Animation decalage des menus

--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -34,7 +34,7 @@
                 <ul class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
-                    <li class="menu">
+                    <li class="menu1">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
@@ -48,7 +48,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu2">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Velouté de légumes d'antan</h3>
@@ -62,7 +62,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu3">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Soupe à l'oignon</h3>
@@ -79,7 +79,7 @@
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <li class="menu">
+                    <li class="menu4">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
@@ -93,7 +93,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu5">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Magret de canard</h3>
@@ -107,7 +107,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu6">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
@@ -124,7 +124,7 @@
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
-                    <li class="menu">
+                    <li class="menu7">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Pétales de violettes glacés</h3>
@@ -138,7 +138,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu8">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Fondant au chocolat</h3>
@@ -152,7 +152,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu9">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Millefeuille croustillant</h3>
