--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -31,7 +31,7 @@
                 <ul class="entrees" >                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
-                    <li class="menu">
+                    <li class="menu1">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Fricassées d'escargots</h3>
@@ -45,7 +45,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu2">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
@@ -59,7 +59,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu3">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Œuf au plat</h3>
@@ -76,7 +76,7 @@
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <li class="menu">
+                    <li class="menu4">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Filet de bœuf aux herbes</h3>
@@ -90,7 +90,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu5">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Parmentier de queue de bœuf</h3>
@@ -104,7 +104,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu6">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Filet de turbot</h3>
@@ -121,7 +121,7 @@
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
-                    <li class="menu">
+                    <li class="menu7">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Paris-Brest</h3>
@@ -135,7 +135,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu8">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus_madagascar">Macaron au chocolat d'exception  </h3>
@@ -149,7 +149,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu">
+                    <li class="menu9">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Mousse au chocolat</h3>
